# serializer version: 1
# name: test_setup[select.mock_classicvario_filter_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'manual',
        'pulse',
        'bio',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.mock_classicvario_filter_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filter mode',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_mode',
    'unique_id': '00:00:00:00:00:03_filter_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[select.mock_classicvario_filter_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock classicVARIO Filter mode',
      'options': list([
        'manual',
        'pulse',
        'bio',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_classicvario_filter_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[select.mock_filter_constant_flow_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.mock_filter_constant_flow_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Constant flow speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Constant flow speed',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'const_flow_speed',
    'unique_id': '00:00:00:00:00:04_const_flow_speed',
    'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
  })
# ---
# name: test_setup[select.mock_filter_constant_flow_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock filter Constant flow speed',
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
      'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_filter_constant_flow_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[select.mock_filter_day_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.mock_filter_day_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Day speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Day speed',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'day_speed',
    'unique_id': '00:00:00:00:00:04_day_speed',
    'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
  })
# ---
# name: test_setup[select.mock_filter_day_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock filter Day speed',
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
      'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_filter_day_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[select.mock_filter_filter_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'manual',
        'constant_flow',
        'pulse',
        'bio',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.mock_filter_filter_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filter mode',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_mode',
    'unique_id': '00:00:00:00:00:04_filter_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[select.mock_filter_filter_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock filter Filter mode',
      'options': list([
        'manual',
        'constant_flow',
        'pulse',
        'bio',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_filter_filter_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[select.mock_filter_high_pulse_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.mock_filter_high_pulse_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'High pulse speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'High pulse speed',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'high_pulse_speed',
    'unique_id': '00:00:00:00:00:04_high_pulse_speed',
    'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
  })
# ---
# name: test_setup[select.mock_filter_high_pulse_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock filter High pulse speed',
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
      'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_filter_high_pulse_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[select.mock_filter_low_pulse_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.mock_filter_low_pulse_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low pulse speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low pulse speed',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'low_pulse_speed',
    'unique_id': '00:00:00:00:00:04_low_pulse_speed',
    'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
  })
# ---
# name: test_setup[select.mock_filter_low_pulse_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock filter Low pulse speed',
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
      'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_filter_low_pulse_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[select.mock_filter_manual_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '35',
        '37.5',
        '40.5',
        '43',
        '45.5',
        '48',
        '51',
        '53.5',
        '56',
        '59',
        '61.5',
        '64',
        '66.5',
        '69.5',
        '72',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.mock_filter_manual_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Manual speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Manual speed',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'manual_speed',
    'unique_id': '00:00:00:00:00:04_manual_speed',
    'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
  })
# ---
# name: test_setup[select.mock_filter_manual_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock filter Manual speed',
      'options': list([
        '35',
        '37.5',
        '40.5',
        '43',
        '45.5',
        '48',
        '51',
        '53.5',
        '56',
        '59',
        '61.5',
        '64',
        '66.5',
        '69.5',
        '72',
      ]),
      'unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_filter_manual_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[select.mock_filter_night_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.mock_filter_night_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night speed',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_speed',
    'unique_id': '00:00:00:00:00:04_night_speed',
    'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
  })
# ---
# name: test_setup[select.mock_filter_night_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock filter Night speed',
      'options': list([
        '400',
        '440',
        '480',
        '515',
        '550',
        '585',
        '620',
        '650',
        '680',
        '710',
        '740',
        '770',
        '800',
        '830',
        '860',
      ]),
      'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_filter_night_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
